# sylva

./: .gitignore  .gitmodules  CMakeLists.txt
shaders/: colored_triangle.vert  input_structures.glsl  mesh.frag  mesh.vert
src/: game.cpp  game.hpp  main.cpp  vulkan_engine.cpp  vulkan_engine.hpp
src/vkei/: descriptor_allocator.cpp  descriptor_allocator.hpp  descriptor_layout_builder.cpp  descriptor_layout_builder.hpp  descriptor_writer.cpp  descriptor_writer.hpp  engine.cpp  engine.hpp  mesh_node.cpp  mesh_node.hpp  metallic_roughness.cpp  metallic_roughness.hpp  node.cpp  node.hpp  pipeline_builder.cpp  pipeline_builder.hpp  renderable.hpp  resource_cleaner.cpp  resource_cleaner.hpp  shader.cpp  shader.hpp  types.hpp  utils.cpp  utils.hpp  vkei.hpp
src/vulkan/: deletion_queue.cpp  deletion_queue.hpp  descriptor_layout_builder.cpp  descriptor_layout_builder.hpp  descriptor_writer.cpp  descriptor_writer.hpp  growable_descriptor_allocator.cpp  growable_descriptor_allocator.hpp  pipeline_builder.cpp  pipeline_builder.hpp  vulkan_engine.cpp  vulkan_engine.hpp  vulkan_utils.cpp  vulkan_utils.hpp
